apps/base/affine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine
  namespace: affine
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: affine
  template:
    metadata:
      labels:
        app: affine
    spec:
      containers:
        - name: affine
          image: ghcr.io/toeverything/affine:v0.7.5-hotfix.1
          ports:
            - containerPort: 3010
          volumeMounts:
            - name: storage
              mountPath: /root/.affine/storage
          readinessProbe:
            httpGet:
              path: /
              port: 3010
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              memory: 2Gi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: affine-storage
